Cleaned up a bit and created the "New Spell" form. * cleaned up formatting a bit. * Changed the "Edit Spells" and "Edit Categories" buttons so that they only   appear if the user is logged in. Made sure the "Add Spell" button is visible   if authenticated. I had to adjust the formatting a bit to make sure it didn't   mess up the layout. I also added an edit button to the Spellview page. These   buttons don't actually do anything yet though. * I created the form necessary to add a spell. The next step is to write the   handler to add it to the database and make sure everything is workign as   expected. * Note: I should also add the localStorage code soon. Having to relogin   every time the page crashes is not hard, but it is getting annoying.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -131,6 +131,7 @@ thead {
 	border-style: solid;
 	border-color: #008888;
 	border-width: 1px;
+	padding: 1em;
 }
 
 .spell-field {
